kubernetes/platform/identity/lldap/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lldap
  labels:
    name: lldap
    tier: platform
    component: identity
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
